force-app/main/default/objects/Account/fields/Billing_Email__c.field-meta.xml
<CustomField>
    <fullName>Billing_Email__c</fullName>
    <description>Email address of billing contact</description>
    <inlineHelpText>Email address of billing contact</inlineHelpText>
    <label>Billing Email</label>
    <type>Email</type>
</CustomField>