force-app/main/default/objects/Account/fields/Contracted__c.field-meta.xml
<CustomField>
    <fullName>Contracted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this Solution Provider under contract ?</description>
    <inlineHelpText>Is this Solution Provider under contract ?</inlineHelpText>
    <label>Contracted</label>
    <type>Checkbox</type>
</CustomField>