force-app/main/default/objects/Account/fields/Date_Solution_Went_Live__c.field-meta.xml
<CustomField>
    <fullName>Date_Solution_Went_Live__c</fullName>
    <description>Updates via PB</description>
    <label>Date Solution Went Live</label>
    <type>Date</type>
</CustomField>