force-app/main/default/objects/Account/fields/DnB_Check__c.field-meta.xml
<CustomField>
    <fullName>DnB_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Have we done a DnB check on this account?</description>
    <inlineHelpText>Have we done a DnB check on this account?</inlineHelpText>
    <label>DnB Check?</label>
    <type>Checkbox</type>
</CustomField>