force-app/main/default/objects/Account/fields/Free_Matches__c.field-meta.xml
<CustomField>
    <fullName>Free_Matches__c</fullName>
    <inlineHelpText>If no matching fees, set at 1000.</inlineHelpText>
    <label>Free Matches</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>