force-app/main/default/objects/Account/fields/Last_DnB_Check_By__c.field-meta.xml
<CustomField>
    <fullName>Last_DnB_Check_By__c</fullName>
    <description>Who did the last DnB check ?</description>
    <inlineHelpText>Who did the last DnB check ?</inlineHelpText>
    <label>Last DnB Check By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Anastasija Verbicka</fullName>
            </value>
            <value>
                <fullName>Dave Riches</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>