force-app/main/default/objects/Account/fields/Last_DnB_Check_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_DnB_Check_Date__c</fullName>
    <description>Date of the last DnB Check</description>
    <inlineHelpText>Date of the last DnB Check</inlineHelpText>
    <label>Last DnB Check Date</label>
    <type>Date</type>
</CustomField>