force-app/main/default/objects/Account/fields/Last_Subscription_Invoice_No__c.field-meta.xml
<CustomField>
    <fullName>Last_Subscription_Invoice_No__c</fullName>
    <label>Last Subscription Invoice No.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>