force-app/main/default/objects/Account/fields/LH__Test_Date__c.field-meta.xml
<CustomField>
    <fullName>LH__Test_Date__c</fullName>
    <description>Date field created for unit testing purposes.</description>
    <label>Test Date</label>
    <type>Date</type>
</CustomField>