force-app/main/default/objects/Account/fields/Match_Details__c.field-meta.xml
<CustomField>
    <fullName>Match_Details__c</fullName>
    <label>Match Details</label>
    <type>TextArea</type>
</CustomField>