force-app/main/default/objects/Account/fields/Match_Fee__c.field-meta.xml
<CustomField>
    <fullName>Match_Fee__c</fullName>
    <label>Match Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>