force-app/main/default/objects/Account/fields/Matching_Rule_2__c.field-meta.xml
<CustomField>
    <fullName>Matching_Rule_2__c</fullName>
    <formula>RIGHT(Name, 8)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Matching Rule 2</label>
    <type>Text</type>
</CustomField>