force-app/main/default/objects/Account/fields/Matching_Rule__c.field-meta.xml
<CustomField>
    <fullName>Matching_Rule__c</fullName>
    <formula>LEFT(Name, 7)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Matching Rule</label>
    <type>Text</type>
</CustomField>