force-app/main/default/objects/Account/fields/Next_Subscription_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Next_Subscription_Invoice__c</fullName>
    <description>When is the next subscription invoice due to be raised ?</description>
    <inlineHelpText>When is the next subscription invoice due to be raised ?</inlineHelpText>
    <label>Next Subscription Invoice</label>
    <type>Date</type>
</CustomField>