force-app/main/default/objects/Account/fields/Problem_Areas_Captured__c.field-meta.xml
<CustomField>
    <fullName>Problem_Areas_Captured__c</fullName>
    <inlineHelpText>Sales team to capture problem areas captured here.</inlineHelpText>
    <label>Problem Areas Captured</label>
    <type>TextArea</type>
</CustomField>