force-app/main/default/objects/Account/fields/Risk_Comments__c.field-meta.xml
<CustomField>
    <fullName>Risk_Comments__c</fullName>
    <description>Comments on the risk assessment</description>
    <inlineHelpText>Comments on the risk assessment</inlineHelpText>
    <label>Risk Comments</label>
    <type>TextArea</type>
</CustomField>