force-app/main/default/objects/Account/fields/Sanction_Check_Completed_By__c.field-meta.xml
<CustomField>
    <fullName>Sanction_Check_Completed_By__c</fullName>
    <description>Who did the last check ?</description>
    <inlineHelpText>Who did the last check ?</inlineHelpText>
    <label>Sanction Check Completed By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Anastasija Verbicka</fullName>
                <default>true</default>
                <label>Anastasija Verbicka</label>
            </value>
            <value>
                <fullName>Nick Mayhew</fullName>
            </value>
            <value>
                <fullName>Dave Riches</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>