force-app/main/default/objects/Account/fields/Sanction_Check_Date__c.field-meta.xml
<CustomField>
    <fullName>Sanction_Check_Date__c</fullName>
    <description>Last date a sanctions check was done</description>
    <inlineHelpText>Last date a sanctions check was done</inlineHelpText>
    <label>Sanction Check Date</label>
    <type>Date</type>
</CustomField>