force-app/main/default/objects/Account/fields/Sanctions_Check__c.field-meta.xml
<CustomField>
    <fullName>Sanctions_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Have we done a sanctions check on the organisation ?</description>
    <inlineHelpText>Have we done a sanctions check on the organisation ?</inlineHelpText>
    <label>Sanctions Check</label>
    <type>Checkbox</type>
</CustomField>