force-app/main/default/objects/Account/fields/Subscription_Comments__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Comments__c</fullName>
    <label>Subscription Comments</label>
    <type>TextArea</type>
</CustomField>