force-app/main/default/objects/Account/fields/Subscription_Fee__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Fee__c</fullName>
    <description>Subscription fee to be on the platform</description>
    <inlineHelpText>Subscription fee to be on the platform. Specify correct currency</inlineHelpText>
    <label>Subscription Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>