force-app/main/default/objects/Account/fields/Subscription_Fee_Secured__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Fee_Secured__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do we have a subscription fee secured?</description>
    <inlineHelpText>Do we have a subscription fee secured?</inlineHelpText>
    <label>Subscription Fee Secured</label>
    <type>Checkbox</type>
</CustomField>