force-app/main/default/objects/Account/fields/X2way_referral_contract__c.field-meta.xml
<CustomField>
    <fullName>X2way_referral_contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>2way referral contract</label>
    <type>Checkbox</type>
</CustomField>