force-app/main/default/objects/Account/recordTypes/Solution_Providor.recordType-meta.xml
<RecordType>
    <fullName>Solution_Providor</fullName>
    <active>true</active>
    <label>Solution Providor</label>
</RecordType>